# jugend-forscht

./: README.md
verarbeitung/: main.py  pyproject.toml
web/: index.html  package.json
web/src/: index.css  main.ts
